Writting results on the page. Code cleaning on js. Some styles corrections.

--- a/rock-paper-scissors-game.html
+++ b/rock-paper-scissors-game.html
@@ -16,7 +16,7 @@
 	eiusmod 
 		</p>
 
-	<button id="rock" class="playerSelection rock">Rock</button>	 
+	<button id="rock" class="playerSelection">Rock</button>	 
 	<button id="paper" class="playerSelection">Paper</button>	 
 	<button id="scissors" class="playerSelection">Scissors</button>	 
 
