Added Score to the Header

--- a/rock-paper-scissors-game.html
+++ b/rock-paper-scissors-game.html
@@ -6,14 +6,17 @@
 	<title>Rock Paper Scissors Game</title>
 </head>
 <body>
-	<header> Rock Paper Scissors Game</header>
+	<header>
+		<span class="playerScore"></span>
+		Rock Paper Scissors Game
+		<span class="computerScore"></span>
+	</header>
 
 
 <div class="content">
 
 	<div> 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-	eiusmod 
+		<p>Choose your force: Rock beats Scissors > Scissors beats Paper > Paper beats Rock
 		</p>
 
 	<button id="rock" class="playerSelection">Rock</button>	 
