Certainly done, though trying to figure out some code improvement.

--- a/rock-paper-scissors-game.html
+++ b/rock-paper-scissors-game.html
@@ -15,9 +15,10 @@
 
 <div class="content">
 
-	<div> 
+	<div class="gamePlay"> 
 		<p>Choose your force: Rock beats Scissors > Scissors beats Paper > Paper beats Rock
 		</p>
+		<p>First to get 5 points wins</p>
 
 	<button id="rock" class="playerSelection">Rock</button>	 
 	<button id="paper" class="playerSelection">Paper</button>	 
@@ -25,7 +26,7 @@
 
 	</div>
 	<div class="results">
-		
+		<!-- <p class="resultInfo"></p> -->
 	</div>
 
 </div>
