Hide button, so the user wont play anymore when winner is found.

--- a/rock-paper-scissors-game.html
+++ b/rock-paper-scissors-game.html
@@ -15,18 +15,15 @@
 
 <div class="content">
 
-	<div class="gamePlay"> 
-		<p>Choose your force: Rock beats Scissors > Scissors beats Paper > Paper beats Rock
-		</p>
+	<div class="gameplay"> 
+		<p>Choose your force: Rock beats Scissors > Scissors beats Paper > Paper beats Rock</p>
 		<p>First to get 5 points wins</p>
-
-	<button id="rock" class="playerSelection">Rock</button>	 
-	<button id="paper" class="playerSelection">Paper</button>	 
-	<button id="scissors" class="playerSelection">Scissors</button>	 
-
+		<button id="rock" class="playerSelection">Rock</button>	 
+		<button id="paper" class="playerSelection">Paper</button>	 
+		<button id="scissors" class="playerSelection">Scissors</button>
 	</div>
+
 	<div class="results">
-		<!-- <p class="resultInfo"></p> -->
 	</div>
 
 </div>
