Done. Will do some styles improvements in the future. =)

--- a/rock-paper-scissors-game.html
+++ b/rock-paper-scissors-game.html
@@ -16,6 +16,7 @@
 <div class="content">
 
 	<div class="gameplay"> 
+
 		<p>Choose your force: Rock beats Scissors > Scissors beats Paper > Paper beats Rock</p>
 		<p>First to get 5 points wins</p>
 		<button id="rock" class="playerSelection">Rock</button>	 
@@ -23,6 +24,7 @@
 		<button id="scissors" class="playerSelection">Scissors</button>
 	</div>
 
+	<button class="newgame hidden">New Game</button>
 	<div class="results">
 	</div>
 
