--- a/index.html
+++ b/index.html
@@ -1,37 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<title>Rock Paper Scissors Game</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Rock Paper Scissors Game</title>
 </head>
+
 <body>
-	<header>
-		<span class="playerScore"></span>
-		Rock Paper Scissors Game
-		<span class="computerScore"></span>
-	</header>
-
-
-<div class="content">
-
-	<div class="gameplay"> 
-
-		<p>Choose your force: Rock beats Scissors > Scissors beats Paper > Paper beats Rock</p>
-		<p>First to get 5 points wins</p>
-		<button id="rock" class="playerSelection">Rock</button>	 
-		<button id="paper" class="playerSelection">Paper</button>	 
-		<button id="scissors" class="playerSelection">Scissors</button>
-	</div>
-
-	<button class="newgame hidden">New Game</button>
-	<div class="results">
-	</div>
-
-</div>
-
-	<script src="javascript.js"></script>
+    <header class="header">
+        <span class="playerScore scoreStyle"></span>
+        <span class="computerScore scoreStyle"></span>
+    </header>
+    <div class="content">
+        <h1 class="game-title">Rock Paper Scissors Game</h1>
+        <div class="gameplay">
+            <p>Choose your force: Rock beats Scissors > Scissors beats Paper > Paper beats Rock</p>
+            <p>First to get 5 points wins</p>
+            <button id="rock" class="playerSelection">Rock</button>
+            <button id="paper" class="playerSelection">Paper</button>
+            <button id="scissors" class="playerSelection">Scissors</button>
+        </div>
+        <button class="newgame hidden">New Game</button>
+        <div class="results">
+        </div>
+    </div>
+    <script src="javascript.js"></script>
 </body>
 
 </html>
-
