primary layout done. images added into directory

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
 </head>
 
 <body>
-    <header class="header">
+    <div class="content">
+        <div class="title">ROCK-PAPER-SCISSORS</div>
+        <div class="pl-sc playerScore">Player Score</div>
+        <div class="sc-divisor"> - </div>
+        <div class="en-sc computerScore">Enemy Score</div>
+        <div class="bt-divisor"> - </div>
+        <div class="battle-display results">Results</div>
+        <div id="rock" class="btn rock-btn playerSelection"></div>
+        <div id="paper" class="btn paper-btn playerSelection"></div>
+        <div id="scissors" class="btn scissors-btn playerSelection"></div>
+        <div class="round-btn btn">ROUND</div>
+        <div class="new-btn newgame btn">NEW</div>
+        <div class="rules-btn btn">RULES</div>
+    </div>
+    <!--     <header class="header">
         <span class="playerScore scoreStyle"></span>
         <span class="computerScore scoreStyle"></span>
     </header>
@@ -24,7 +38,7 @@
         <button class="newgame hidden">New Game</button>
         <div class="results">
         </div>
-    </div>
+    </div> -->
     <script src="javascript.js"></script>
 </body>
 
