--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
     <div class="content">
         <div class="title">ROCK-PAPER-SCISSORS</div>
         <div class="pl-sc playerScore">Player Score</div>
-        <div class="sc-divisor"> - </div>
+        <div class="sc-divisor">
+            <div class="win-lose-left win-lose-ind">
+            </div>
+            <div class="win-lose-right win-lose-ind"> 
+            </div>
+        </div>
         <div class="en-sc computerScore">Enemy Score</div>
         <div class="battle-display results">Results</div>
         <div id="rock" class="btn rock-btn playerSelection"></div>
         <div id="paper" class="btn paper-btn playerSelection"></div>
         <div id="scissors" class="btn scissors-btn playerSelection"></div>
-        <div class="round-btn btn">ROUND</div>
-        <div class="new-btn newgame btn">NEW</div>
-        <div class="rules-btn btn">RULES</div>
+        <div class="btn round-btn">ROUND</div>
+        <div class="btn new-btn newgame">NEW</div>
+        <div class="btn rules-btn">RULES</div>
     </div>
     <!--     <header class="header">
         <span class="playerScore scoreStyle"></span>
