icon in battle fix. some js fix.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <div class="content">
         <div class="title">ROCK-PAPER-SCISSORS</div>
         <div class="pl-sc playerScore">Player Score</div>
-        <div class="sc-divisor">
+<!--         <div class="sc-divisor">
             <div class="win-lose-left win-lose-ind">
             </div>
-            <div class="win-lose-right win-lose-ind"> 
+            <div class="win-lose-right win-lose-ind">
             </div>
-        </div>
+        </div> -->
         <div class="en-sc computerScore">Enemy Score</div>
+        <div class="pl-ch btn-s"></div>
+        <div class="en-ch btn-s"></div>
         <div class="battle-display results">Results</div>
         <div id="rock" class="btn rock-btn playerSelection"></div>
         <div id="paper" class="btn paper-btn playerSelection"></div>
@@ -26,6 +28,8 @@
         <div class="btn new-btn newgame">NEW</div>
         <div class="btn rules-btn">RULES</div>
     </div>
+
+    
     <!--     <header class="header">
         <span class="playerScore scoreStyle"></span>
         <span class="computerScore scoreStyle"></span>
