Complete, as it can be.

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         <div class="en-sc computerScore">Enemy Score</div>
         <div class="pl-ch btn-s"></div>
         <div class="en-ch btn-s"></div>
-        <div class="battle-display results">Results</div>
-        <div id="rock" class="btn rock-btn playerSelection"></div>
-        <div id="paper" class="btn paper-btn playerSelection"></div>
-        <div id="scissors" class="btn scissors-btn playerSelection"></div>
+        <div class="battle-display results"><h2 class='result-style'></h2></div>
+        <div id="rock" class="btn rock-btn rps-choice-btn playerSelection"></div>
+        <div id="paper" class="btn paper-btn rps-choice-btn playerSelection"></div>
+        <div id="scissors" class="btn scissors-btn rps-choice-btn playerSelection"></div>
         <div class="btn round-btn">ROUND</div>
         <div class="btn new-btn newgame">NEW</div>
         <div class="btn rules-btn">RULES</div>
     </div>
 
-    
+
     <!--     <header class="header">
         <span class="playerScore scoreStyle"></span>
         <span class="computerScore scoreStyle"></span>
